--- a/styles.css
+++ b/styles.css
@@ -1,81 +1,87 @@
-body {
-  text-align: center;
-  background-color: #283149;
+body, html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
-h1 {
-  font-size: 5rem;
-  color: #DBEDF3;
-  font-family: "Arvo", cursive;
-  text-shadow: 3px 0 #DA0463;
-
+.main-frame {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
-footer {
-  color: #DBEDF3;
-  font-family: sans-serif;
+img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensure the image covers the entire area */
 }
-
-.w {
-  background: url("images/tom1.png");
+footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-.a {
-  background: url("images/tom2.png");
+.snd1 {
+  position: absolute; /* Set position to something other than static */
+  left: 575px;
+  top: 310px;
+  z-index: 100;
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
 }
-
-.s {
-  background: url("images/tom3.png");
+.snd2{
+  position: absolute; /* Set position to something other than static */
+  left: 350px;
+  top: 250px;
+  z-index: 10;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
 }
-
-.d {
-  background: url("images/tom4.png");
+.snd3{
+  position: absolute; /* Set position to something other than static */
+  left: 900px;
+  top: 250px;
+  z-index: 10;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
 }
-
-.j {
-  background: url("images/snare.png");
+.snd6{
+  position: absolute; /* Set position to something other than static */
+  left: 150px;
+  top: 100px;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
 }
-
-.k {
-  background: url("images/crash.png");
+.snd7{
+  position: absolute; /* Set position to something other than static */
+  left: 1050px;
+  top: 90px;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
 }
-
-.l {
-  background: url("images/kick.png");
-}
-
-.set {
-  margin: 10% auto;
-}
-
-.game-over {
-  background-color: red;
-  opacity: 0.8;
-}
-
-.pressed {
-  box-shadow: 0 3px 4px 0 #DBEDF3;
-  opacity: 0.5;
-}
-
-.red {
-  color: red;
-}
-
-.drum {
-  outline: none;
-  border: 10px solid #404B69;
-  font-size: 5rem;
-  font-family: 'Arvo', cursive;
-  line-height: 2;
-  font-weight: 900;
-  color: #DA0463;
-  text-shadow: 3px 0 #DBEDF3;
-  border-radius: 15px;
-  display: inline-block;
+.snd5{
+  position: absolute;
   width: 150px;
   height: 150px;
-  text-align: center;
-  margin: 10px;
-  background-color: white;
+  left: 400px;
+  top: 100px;
+  transform: rotate3d(20, 20, 20, 45deg);
+  perspective: 1000px;
+}
+#p2 {
+  width: 150px;
+  height: 150px;
+  position: absolute; 
+  top: 100px;
+  left: 400px;
+  transform: rotate3d(20, 20, 20, 45deg); /* Rotating by 45 degrees */
+  perspective: 1000px; /* Adjust the perspective value as needed */
 }
